# ClothoPus

./: .gitignore  MANIFEST.in  README.md  Taskfile.yml  api_server.py  bericht.typ  bericht2.typ  hx711.py  literatur.bib  prepare.sh  pyproject.toml  qr_reader.py  sensor.py  setup.py
OPTag/: common.py  fields.py
PrintTag/: opt_check.py  taghandler.py
PrintTag/data/: material_type_enum.yaml
Stack/: stack.py
extras/: README.txt  clothopus.md
extras/github/: bug_report.yml  feature_request.yml
loadcell/: hx711.py
octoprint_clothopus/: __init__.py  hx711.py  predictor.py  sanitze.py
octoprint_clothopus/OPTag/: __init__.py  fields.py  opt_check.py  record.py  taghandler.py
octoprint_clothopus/OPTag/data/: aux_fields.yaml
octoprint_clothopus/hx711/: hx711.py
octoprint_clothopus/pn5180/: definitions.py  sensor.py
octoprint_clothopus/stack/: stack.py
octoprint_clothopus/static/css/: clothopus.css
octoprint_clothopus/static/js/: clothopus.js
octoprint_clothopus/templates/: clothopus_settings.jinja2  clothopus_tab.jinja2
pn5180/: sensor.py
src/: boot.py
src/driver/: kailhEnc.py
src/driver/pn5180/: __init__.py  sensor.py
src/dummy_driver/: DummyEnc.py  DummySensor.py
translations/: README.txt
